# windows_shortcuts

./: Cargo.toml  license.md
src/: main.rs
